# bpod-gui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: uv-build.yml
bpod_gui/: __main__.py  start.py
bpod_gui/base_ui/launcher/: about_dialog.py  launcher.py
bpod_gui/qss/: manual_control_interface.qss
bpod_gui/ui/: manual_control.py
bpod_gui/ui/console/: __init__.py  manual_control.py  module_widget.py  state_machine_widget.py
bpod_gui/ui/console/components/: LED.py
bpod_gui/ui/launcher/: about_dialog.py  launcher.py
bpod_gui/ui_components/: launcher.py
